# domekit

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
apps/file-analyst/: README.md  domekit.yaml  setup_data.py
apps/health-poc/: domekit.yaml  test_questions.md
apps/research-agent/: README.md  domekit.yaml  setup_data.py
cli/: domekit.py
contracts/: __init__.py  api.py  audit.py  embedding.py  manifest.py  policy.py  tool_sdk.py  vector_db.py
dashboard/: index.html
dashboard/css/: styles.css
dashboard/js/: api.js  app.js
docs/: api-reference.md  architecture.md  built-in-tools.md  development.md  manifest-reference.md  mcp-server.md  security.md  troubleshooting.md
runtime/: app.py  manifest_loader.py  mcp_helpers.py  mcp_server.py  metrics.py  policy.py  security.py  tool_router.py
runtime/audit/: logger.py  query.py
runtime/embedding_adapters/: ollama.py
runtime/model_adapters/: ollama.py
runtime/tools/: base.py  read_file.py  registry.py  sql_query.py  vector_manage.py  vector_search.py  write_file.py
runtime/vector_adapters/: __init__.py  chroma.py  lance.py
scripts/: no-egress-proof.sh
site/: index.html  quickstart.html
site/blog/: ai-agent-permissions.html  index.html
site/css/: blog.css  landing.css
tests/integration/: test_e2e.py  test_policy_block.py  test_tool_execution.py
tests/unit/: test_audit.py  test_embedding_adapter.py  test_manifest_loader.py  test_mcp_server.py  test_metrics.py  test_ollama_fallback.py  test_policy.py  test_runtime.py  test_security.py  test_tools.py  test_vector_manage.py  (+1 more)
(+28 files in other folders)
